Add default category icon and improve visit display: - Set default icon for empty category in AdventureModal - Enhance layout for visit buttons and validation messages in DateRangeCollapse - Update localization files to include "no visits" strings in multiple languages

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -256,7 +256,8 @@
     "additional_info": "Weitere Informationen",
     "invalid_date_range": "Ungültiger Datumsbereich",
     "sunrise_sunset": "Sonnenaufgang",
-    "timezone": "Zeitzone"
+    "timezone": "Zeitzone",
+    "no_visits": "Keine Besuche"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
