--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -304,7 +304,8 @@
     "additional_info": "附加信息",
     "invalid_date_range": "无效的日期范围",
     "sunrise_sunset": "日出",
-    "timezone": "时区"
+    "timezone": "时区",
+    "no_visits": "没有访问"
   },
   "auth": {
     "forgot_password": "忘记密码？",
