Enhance timezone handling in AdventureModal and DateRangeCollapse components; add support for departure and arrival timezones in the TimezoneSelector and update localization for new timezone labels.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -65,6 +65,8 @@
 		"invalid_date_range": "Invalid date range",
 		"timezone": "Timezone",
 		"no_visits": "No visits",
+		"departure_timezone": "Departure Timezone",
+		"arrival_timezone": "Arrival Timezone",
 		"no_image_found": "No image found",
 		"collection_link_error": "Error linking adventure to collection",
 		"adventure_delete_confirm": "Are you sure you want to delete this adventure? This action cannot be undone.",
