--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -257,7 +257,9 @@
     "invalid_date_range": "잘못된 날짜 범위",
     "sunrise_sunset": "해돋이",
     "timezone": "시간대",
-    "no_visits": "방문 없음"
+    "no_visits": "방문 없음",
+    "arrival_timezone": "도착 시간대",
+    "departure_timezone": "출발 시간대"
   },
   "auth": {
     "both_passwords_required": "두 암호 모두 필요합니다",
