--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -307,7 +307,9 @@
     "timezone": "时区",
     "no_visits": "没有访问",
     "arrival_timezone": "到达时区",
-    "departure_timezone": "离开时区"
+    "departure_timezone": "离开时区",
+    "arrival_date": "到达日期",
+    "departure_date": "出发日期"
   },
   "auth": {
     "forgot_password": "忘记密码？",
