--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -259,7 +259,9 @@
     "timezone": "Fuseau horaire",
     "no_visits": "Pas de visites",
     "arrival_timezone": "Fuseau horaire d'arrivée",
-    "departure_timezone": "Fuseau horaire de départ"
+    "departure_timezone": "Fuseau horaire de départ",
+    "arrival_date": "Date d'arrivée",
+    "departure_date": "Date de départ"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
